--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -182,12 +182,12 @@ plugins:
   - social:
       cards: true
 
-  - minify:
-      minify_html: true
-      minify_js: true
-      minify_css: true
-      htmlmin_opts:
-      remove_comments: true
+ # - minify:
+ #     minify_html: true
+ #     minify_js: true
+ #     minify_css: true
+ #     htmlmin_opts:
+ #     remove_comments: true
       
   - git-revision-date-localized:
       type: timeago
