--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,13 +11,14 @@ copyright: Copyright &copy; 2024 <a href="https://github.com/gOOvER">gOOvER</a>.
 
 theme:
   name: material
-  
   locale: en
 
+  # Fonts für modernen Look
   font:
     text: Roboto
     code: Roboto Mono
 
+  # Icons
   icon:
     edit: material/pencil 
     view: material/eye
@@ -45,38 +46,34 @@ theme:
       - content.code.annotate
       - content.action.edit
       - content.action.view
-      # - content.tabs.link
-      # - header.autohide
-      # - navigation.expand
+      - content.code.copy
+      - content.tabs.link
       - navigation.indexes
       - navigation.instant
       - navigation.instant.progress
       - navigation.sections
       - navigation.tabs
-      # - navigation.tabs.sticky
       - navigation.top
       - navigation.tracking
       - search.highlight
       - search.share
       - search.suggest
       - toc.follow
-      # - toc.integrate
+      - toc.integrate
   
   palette:
-    - media: "(prefers-color-scheme: light)"
-      scheme: slate
-      primary: deep orange
-      accent: deep orange
+    - scheme: default
+      primary: indigo
+      accent: amber
       toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to light mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: default
-      primary: deep orange
-      accent: deep orange
-      toggle:
-        icon: material/toggle-switch
+        icon: material/weather-night
         name: Switch to dark mode
+    - scheme: slate
+      primary: indigo
+      accent: amber
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
 
 # Customization
 extra:
